--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 			<div class="avi-footer">
 				<ul>
                                     <li><a href="https://www.facebook.com/Avinash.haina" target="_blank"><img src="images/facebook.png" alt="facebook"></a></li>
-                                    <li><a href="https://twitter.com/avinash4real" target="_blank"><img src="images/twitter.png" alt="twitter"></a></li>
-                                    <li><a href="https://www.instagram.com/avinash4real/" target="_blank"><img src="images/instagram.png" alt="instagram"></a></li>
-                                    <li><a href="https://www.linkedin.com/in/avinash-kumar-8a4719153/" target="_blank"><img src="images/linkedin.png" alt="linkedin"></a></li>
+                                    <li><a href="https://twitter.com/thisismravi" target="_blank"><img src="images/twitter.png" alt="twitter"></a></li>
+                                    <li><a href="https://www.instagram.com/thisismravi/" target="_blank"><img src="images/instagram.png" alt="instagram"></a></li>
+                                    <li><a href="https://www.linkedin.com/in/thisismravi/" target="_blank"><img src="images/linkedin.png" alt="linkedin"></a></li>
 				</ul>
 			</div>
 
